--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "meshline": "^3.3.1",
     "motion": "^12.23.22",
     "next": "15.5.4",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-icons": "^2.2.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
