--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
     "meshline": "^3.3.1",
     "motion": "^12.23.22",
     "next": "15.5.4",
@@ -20,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
@@ -29,6 +35,7 @@
     "@types/react-dom": "^19",
     "@types/react-icons": "^2.2.7",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
