--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "three.meshline": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
